Update the latest version of the library